Очередной промежуточный итог работы. Что сделано: - добавлены новые шрифты (но их по уму стоит заменить другими); - добавлена модель для фильтров и использования препаратов для построения «курсов»; - внесены измения в модель препаратов (но нужно будет внести еще); - добавлен drawer и одна заготовка страницы под него; - изменена страница категорий;

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,3 +55,9 @@ flutter:
           weight: 600
         - asset: fonts/OpenSans-Bold.ttf
           weight: 700
+    - family: OpenSansCondensed
+      fonts:
+        - asset: fonts/OpenSansCondensed-Light.ttf
+          weight: 300
+        - asset: fonts/OpenSansCondensed-Bold.ttf
+          weight: 700
